v8/tests/messages/property-call-init.out
property-call-init.js:1: Uncaught TypeError: Cannot call method 'x' of null
null.x()
     ^
